CSS modifications for mobile readiness

--- a/private/semantic-ui-theming/src/site/globals/inverted.import.less
+++ b/private/semantic-ui-theming/src/site/globals/inverted.import.less
@@ -271,7 +271,7 @@ div.ui.block-neutral-thin {
     background-color: @black !important;
 }
 
-.ui.inverted .ui.cards > .card, .ui.inverted.ui.card {
+.ui.inverted .ui.cards > .card, .ui.inverted .ui.card {
   background: rgb(68, 68, 68);
   box-shadow: 0px 1px 3px 0px @grey, 0px 0px 0px 1px @grey;
 }
@@ -287,6 +287,7 @@ div.ui.block-neutral-thin {
 
 .ui.inverted .ui.cards > .card > .extra, .ui.inverted .ui.card > .extra {
   color: rgba(255, 255, 255, 0.7);
+  border-top: 1px solid rgba(255, 255, 255, .05)!important;
 }
 
 .ui.inverted .ui.cards > .card > .content {
