--- a/private/semantic-ui-theming/src/site/globals/plyr.import.less
+++ b/private/semantic-ui-theming/src/site/globals/plyr.import.less
@@ -1,3 +1,8 @@
+
+.ui.clip video {
+    width: 100%;
+}
+
 @keyframes plyr-progress{
     to{
         background-position:25px 0
@@ -41,13 +46,13 @@
 .plyr button{
     font:inherit;
     line-height:inherit;
-    width:auto
+    width:auto;
 }
 .plyr:focus{
-    outline:0
+    outline:0;
 }
 .plyr--full-ui{
-    box-sizing:border-box
+    box-sizing:border-box;
 }
 .plyr--full-ui *,.plyr--full-ui ::after,.plyr--full-ui ::before{
     box-sizing:inherit
