Some css modifications

--- a/private/semantic-ui-theming/src/site/globals/inverted.import.less
+++ b/private/semantic-ui-theming/src/site/globals/inverted.import.less
@@ -60,6 +60,11 @@
   background-color: @veryStrongTransparentBlack;
   border-color: rgba(175, 175, 175, 0.30);
   color: rgba(255, 255, 255, 0.87);
+  border-bottom: 1px solid rgba(175, 175, 175, 0.20);
+}
+
+.ui.inverted .ui.basic.table th {
+    background: 0 0;
 }
 
 .ui.inverted .ui.sortable.table thead th {
@@ -201,10 +206,6 @@ div.ui.block-neutral-thin {
 
 
 .ui.inverted .ui.basic.table t.ui.main tr {
-  border-bottom: 1px solid rgba(175, 175, 175, 0.20);
-}
-
-.ui.inverted .ui.table thead th {
   border-bottom: 1px solid rgba(175, 175, 175, 0.20);
 }
 
