--- a/private/semantic-ui-theming/src/site/globals/ext.import.less
+++ b/private/semantic-ui-theming/src/site/globals/ext.import.less
@@ -26,6 +26,10 @@
   white-space: nowrap;
 }
 
+.nopadding {
+  padding: 0px !important;
+}
+
 /*-------------------
        Spaced
 --------------------*/
