CSS modifications due to Clash update

--- a/private/semantic-ui-theming/src/site/globals/ext.import.less
+++ b/private/semantic-ui-theming/src/site/globals/ext.import.less
@@ -59,6 +59,10 @@
   background-color: transparent;
 }
 
+.ui.inline.top {
+  vertical-align: top;
+}
+
 .tooltip-inner {
   max-width: 300px;
   color: #eeeeee;
@@ -262,4 +266,8 @@ mark {
 
 .ui.flex > .grow {
   flex-grow: 1;
+}
+
+.ui.flex > .centered {
+  text-align: center;
 }
