--- a/private/semantic-ui-theming/src/site/globals/inverted.import.less
+++ b/private/semantic-ui-theming/src/site/globals/inverted.import.less
@@ -9,19 +9,19 @@
 }
 
 .ui.inverted a.invertable {
-  color: @lightPrimaryColor;
+  color: @lightPrimaryColor !important;
 }
 
 .ui.inverted .bg-header {
-  background-color: #393939;
+  background-color: #393939 !important;
 }
 
 .ui.inverted .bg-footer {
-  background-color: #393939;
+  background-color: #393939 !important;
 }
 
 .ui.inverted .bg-neutral {
-  background-color: #303030;
+  background-color: #303030 !important;
 }
 
 .ui.inverted .ui.table {
@@ -113,39 +113,39 @@
 
 .ui.inverted .bg-team-blue, .ui.inverted .bg-team-win,
 .ui.inverted .ui.basic.table td.bg-team-blue {
-  background-color: #162228;
+  background-color: #162228 !important;
 }
 
 .ui.inverted.bg-team-blue.selectable, .ui.inverted .bg-team-win.selectable,
 .ui.inverted .bg-team-red.selectable, .ui.inverted .bg-team-loss.selectable {
-    color: rgba(255, 255, 255, 0.87);
+    color: rgba(255, 255, 255, 0.87) !important;
 }
 
 .ui.inverted .bg-team-blue.selectable:hover,
 .ui.inverted .bg-team-win.selectable:hover {
-    background-color: lighten(#162228, 7%);
+    background-color: lighten(#162228, 7%) !important;
 }
 
 .ui.inverted .bg-team-red.selectable:hover,
 .ui.inverted .bg-team-loss.selectable:hover {
-    background-color: lighten(#270C0C, 7%);
+    background-color: lighten(#270C0C, 7%) !important;
 }
 
 .ui.inverted .bg-team-blue.selected {
-    background-color: lighten(#162228, 7%);
+    background-color: lighten(#162228, 7%) !important;
 }
 
 .ui.inverted .bg-team-red, .ui.inverted .bg-team-loss,
 .ui.inverted .ui.basic.table td.bg-team-red {
-  background-color: #270C0C;
+  background-color: #270C0C !important;
 }
 
 .ui.inverted .bg-team-red.selected {
-  background-color: lighten(#270C0C, 7%);
+  background-color: lighten(#270C0C, 7%) !important;
 }
 
 .ui.inverted .scoreboard-player {
-  border-bottom: 1px solid rgba(175, 175, 175, 0.20);
+  border-bottom: 1px solid rgba(175, 175, 175, 0.20) !important;
 }
 
 .ui.inverted .ui.opaque.label {
@@ -154,7 +154,7 @@
 }
 
 .ui.inverted .bg-light-primary {
-  background-color: #142437;
+  background-color: #142437 !important;
 }
 
 div.ui.block-neutral {
