--- a/private/semantic-ui-theming/src/site/globals/game.import.less
+++ b/private/semantic-ui-theming/src/site/globals/game.import.less
@@ -10,59 +10,59 @@
 @darkRedBackground: darken(@redBackground, 5%);
 
 .ui.team-blue-bordered.image {
-  border: @imageTeamBlueBorder;
+  border: @imageTeamBlueBorder !important;
 }
 
 .ui.team-red-bordered.image {
-  border: @imageTeamRedBorder;
+  border: @imageTeamRedBorder !important;
 }
 
 a .ui.team-blue-bordered.image:hover {
-  border: 1px @blueBorderColor solid;
+  border: 1px @blueBorderColor solid !important;
 }
 
 a .ui.team-red-bordered.image:hover {
-  border: 1px @redBorderColor solid;
+  border: 1px @redBorderColor solid !important;
 }
 
 .ui.selected.team-blue-bordered.image {
-  border: 1px @blueBorderColor solid;
+  border: 1px @blueBorderColor solid !important;
 }
 
 .ui.selected.team-red-bordered.image {
-  border: 1px @redBorderColor solid;
+  border: 1px @redBorderColor solid !important;
 }
 
 .team-blue-border-left, .team-win-border-left {
-  border-left: 3px @blueBorderColor solid;
+  border-left: 3px @blueBorderColor solid !important;
 }
 
 .team-blue-border-bottom, .team-win-border-bottom {
-  border-bottom: 3px @blueBorderColor solid;
+  border-bottom: 3px @blueBorderColor solid !important;
 }
 
 .team-blue-border-right, .team-win-border-right {
-  border-right: 3px @blueBorderColor solid;
+  border-right: 3px @blueBorderColor solid !important;
 }
 
 .team-blue-border-top, .team-win-border-top {
-  border-top: 3px @blueBorderColor solid;
+  border-top: 3px @blueBorderColor solid !important;
 }
 
 .team-red-border-left, .team-loss-border-left {
-  border-left: 3px @redBorderColor solid;
+  border-left: 3px @redBorderColor solid !important;
 }
 
 .team-red-border-bottom, .team-loss-border-bottom {
-  border-bottom: 3px @redBorderColor solid;
+  border-bottom: 3px @redBorderColor solid !important;
 }
 
 .team-red-border-right, .team-loss-border-right {
-  border-right: 3px @redBorderColor solid;
+  border-right: 3px @redBorderColor solid !important;
 }
 
 .team-red-border-top, .team-loss-border-top {
-  border-top: 3px @redBorderColor solid;
+  border-top: 3px @redBorderColor solid !important;
 }
 
 /*--------------
@@ -71,73 +71,73 @@ a .ui.team-red-bordered.image:hover {
 
 .bg-team-blue, .bg-team-win,
 .ui.basic.table td.bg-team-blue {
-  background-color: @blueBackground; // #d9edf7;
+  background-color: @blueBackground !important; // #d9edf7;
 }
 
 .bg-team-blue.selectable, .bg-team-win.selectable,
 .bg-team-red.selectable, .bg-team-loss.selectable {
-    color: @textColor;
+    color: @textColor !important;
 }
 
 .bg-team-blue.selectable:hover, .bg-team-win.selectable:hover {
-    background-color: @darkBlueBackground;
+    background-color: @darkBlueBackground !important;
     cursor: pointer;
 }
 
 .bg-team-red.selectable:hover, .bg-team-loss.selectable:hover {
-    background-color: @darkRedBackground;
+    background-color: @darkRedBackground !important;
     cursor: pointer;
 }
 
 .bg-team-blue.selected {
-    background-color: @darkBlueBackground;
+    background-color: @darkBlueBackground !important;
 }
 
 .bg-team-red, .bg-team-loss,
 .ui.basic.table td.bg-team-red {
-  background-color: @redBackground; // #f2dede;
+  background-color: @redBackground !important; // #f2dede;
 }
 
 .bg-team-red.selected {
-    background-color: @darkRedBackground;
+    background-color: @darkRedBackground !important;
 }
 
 .bg-neutral {
-  background-color: #ffffff;
+  background-color: #ffffff !important;
 }
 
 .bg-dark-neutral {
-  background-color: darken(@lightGrey, 10%);
+  background-color: darken(@lightGrey, 10%) !important;
 }
 
 .bg-primary {
-  background-color: @primaryColor;
-  color: @white;
+  background-color: @primaryColor !important;
+  color: @white !important;
 }
 
 .bg-secondary {
-  background-color: @secondaryColor;
+  background-color: @secondaryColor !important;
 }
 
 .bg-light-primary {
-  background-color: @lightPrimaryColor;
+  background-color: @lightPrimaryColor !important;
 }
 
 .bg-light-secondary {
-  background-color: @lightSecondaryColor;
+  background-color: @lightSecondaryColor !important;
 }
 
 
 .bg-header {
-  background-color: lighten(@lightGrey, 5%);
+  background-color: lighten(@lightGrey, 5%) !important;
 }
 
 .bg-footer {
-  background-color: lighten(@lightGrey, 5%);
+  background-color: lighten(@lightGrey, 5%) !important;
 }
 
 .bg-white {
-    background-color: @white;
+    background-color: @white !important;
 }
 
 
