--- a/private/semantic-ui-theming/src/site/globals/ext.import.less
+++ b/private/semantic-ui-theming/src/site/globals/ext.import.less
@@ -95,15 +95,11 @@
 }
 
 .ui.bold {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .scoreboard-player {
   border-bottom: 1px solid @lightGrey;
-}
-
-.scoreboard-player:last-of-type {
-  border-bottom: none;
 }
 
 .rune.selected {
