--- a/private/semantic-ui-theming/src/site/globals/game.import.less
+++ b/private/semantic-ui-theming/src/site/globals/game.import.less
@@ -164,33 +164,31 @@ a .ui.team-red-bordered.image:hover {
     Block
 ---------------*/
 
-div.ui.block-primary {
+.block-primary {
   margin-bottom: 0.5em;
   border-top: 3px solid @primaryColor;
   border-bottom: 1px solid @primaryColor;
 }
 
-div.ui.block-neutral {
+.block-neutral {
   margin-bottom: 0.5em;
-  border-top: 3px solid @lightGrey;
-  border-bottom: 1px solid @lightGrey;
+  border-top: 3px solid @lightGrey !important;
+  border-bottom: 1px solid @lightGrey !important;
 }
 
-div.ui.block-neutral-thin {
+.block-neutral-thin {
   margin-bottom: 0.5em;
   border-top: 1px solid @lightGrey;
   border-bottom: 1px solid @lightGrey;
 }
 
-div.ui.block-header {
-  border-top: 3px solid @grey;
-  border-bottom: 1px solid @grey;
+.block-header {
+  border-top: 3px solid @borderBlueGrey !important;
+  border-bottom: 1px solid @borderBlueGrey !important;
 }
 
-div.ui.block-footer {
-  margin-bottom: 0.5em;
-  border-top: 1px solid @grey;
-  border-bottom: 1px solid @grey;
+.block-footer {
+  border-bottom: 1px solid @borderBlueGrey !important;
 }
 
 .block-neutral > .grid:last-child {
