CSS modifications, new colors added

--- a/private/fomantic-ui-theming/semantic/src/site/globals/ext.import.less
+++ b/private/fomantic-ui-theming/semantic/src/site/globals/ext.import.less
@@ -28,6 +28,13 @@
   padding: 0px !important;
 }
 
+.bold.text {
+  font-weight: 500;
+}
+.very.bold.text {
+  font-weight: 700;
+}
+
 /*-------------------
        Spaced
 --------------------*/
@@ -94,9 +101,7 @@
   margin-bottom: 0.5em !important;
 }
 
-.ui.bold {
-  font-weight: 500;
-}
+
 
 .scoreboard-player {
   border-bottom: 1px solid @lightGrey;
