--- a/private/fomantic-ui-theming/semantic/src/site/globals/game.import.less
+++ b/private/fomantic-ui-theming/semantic/src/site/globals/game.import.less
@@ -18,51 +18,51 @@
 }
 
 a .ui.team-blue-bordered:hover {
-  border: 1px @blueBorderColor solid !important;
+  border: 1px @blue solid !important;
 }
 
 a .ui.team-red-bordered:hover {
-  border: 1px @redBorderColor solid !important;
+  border: 1px @red solid !important;
 }
 
 .ui.selected.team-blue-bordered {
-  border: 1px @blueBorderColor solid !important;
+  border: 1px @blue solid !important;
 }
 
 .ui.selected.team-red-bordered {
-  border: 1px @redBorderColor solid !important;
+  border: 1px @red solid !important;
 }
 
 .blue-border-left, a.segment.blue-border-left, div.segment.blue-border-left {
-  border-left: 3px @blueBorderColor solid !important;
+  border-left: 3px @blue solid !important;
 }
 
 .blue-border-bottom {
-  border-bottom: 3px @blueBorderColor solid !important;
+  border-bottom: 3px @blue solid !important;
 }
 
 .blue-border-right, a.segment.blue-border-right, div.segment.blue-border-right {
-  border-right: 3px @blueBorderColor solid !important;
+  border-right: 3px @blue solid !important;
 }
 
 .blue-border-top {
-  border-top: 3px @blueBorderColor solid !important;
+  border-top: 3px @blue solid !important;
 }
 
 .red-border-left, a.segment.red-border-left, div.segment.red-border-left {
-  border-left: 3px @redBorderColor solid !important;
+  border-left: 3px @red solid !important;
 }
 
 .red-border-bottom {
-  border-bottom: 3px @redBorderColor solid !important;
+  border-bottom: 3px @red solid !important;
 }
 
 .red-border-right, a.segment.red-border-right, div.segment.red-border-right {
-  border-right: 3px @redBorderColor solid !important;
+  border-right: 3px @red solid !important;
 }
 
 .red-border-top {
-  border-top: 3px @redBorderColor solid !important;
+  border-top: 3px @red solid !important;
 }
 
 /*--------------
@@ -89,7 +89,7 @@ a .ui.team-red-bordered:hover {
     cursor: pointer;
 }
 
-.bg-team-blue.selected {
+.bg-team-win.selected {
     background-color: @darkBlueBackground !important;
 }
 
@@ -98,7 +98,7 @@ a .ui.team-red-bordered:hover {
   background-color: @redBackground !important; // #f2dede;
 }
 
-.bg-team-red.selected {
+.bg-team-loss.selected {
     background-color: @darkRedBackground !important;
 }
 
