--- a/private/fomantic-ui-theming/semantic/src/site/globals/slider.import.less
+++ b/private/fomantic-ui-theming/semantic/src/site/globals/slider.import.less
@@ -26,7 +26,7 @@
   left: 0;
   height: 4px;
   border-radius: 6px;
-  background-color: @blue;
+  background-color: @primaryColor;
 }
 .rc-slider-handle {
   position: absolute;
@@ -38,23 +38,23 @@
   cursor: -webkit-grab;
   cursor: grab;
   border-radius: 50%;
-  border: solid 2px @blue;
+  border: solid 2px @primaryColor;
   background-color: #fff;
   -ms-touch-action: pan-x;
       touch-action: pan-x;
 }
 .rc-slider-handle:hover {
-  border-color: darken(@blue, 10%);
+  border-color: darken(@primaryColor, 10%);
 }
 .rc-slider-handle:active {
-  border-color: darken(@blue, 10%);
-  box-shadow: 0 0 5px darken(@blue, 10%);
+  border-color: darken(@primaryColor, 10%);
+  box-shadow: 0 0 5px darken(@primaryColor, 10%);
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
 .rc-slider-handle:focus {
-  border-color: darken(@blue, 10%);
-  box-shadow: 0 0 0 5px @blue;
+  border-color: darken(@primaryColor, 10%);
+  box-shadow: 0 0 0 5px @primaryColor;
   outline: none;
 }
 .rc-slider-mark {
@@ -100,7 +100,7 @@
   margin-left: -4px;
 }
 .rc-slider-dot-active {
-  border-color: @blue;
+  border-color: @primaryColor;
 }
 .rc-slider-disabled {
   background-color: #e9e9e9;
