--- a/private/fomantic-ui-theming/semantic/src/site/globals/ext.import.less
+++ b/private/fomantic-ui-theming/semantic/src/site/globals/ext.import.less
@@ -36,6 +36,22 @@
 }
 
 /*-------------------
+       Backgrounds
+--------------------*/
+
+.bg-base {
+    background-color: @invertedBase!important;
+}
+
+.bg-surface {
+    background-color: @invertedSurface!important;
+}
+
+.bg-overlay-dark {
+    background-color: @invertedOverlayDark!important;
+}
+
+/*-------------------
        Spaced
 --------------------*/
 
